--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-express": "nodemon -r esm express-graphql",
-    "start-pure": "nodemon -r esm pure-graphql",
+    "server": "nodemon -r esm server",
     "client": "node -r esm client"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.9.14",
     "express": "^4.17.1",
-    "express-graphql": "^0.9.0",
     "graphql": "^14.5.8"
   },
   "devDependencies": {
