--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,33 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
-  "configurations": []
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Pure Server",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run", "pure-server"],
+      "port": 9229,
+      "skipFiles": ["<node_internals>/**"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Apollo Server",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run", "apollo-server"],
+      "port": 9229,
+      "skipFiles": ["<node_internals>/**"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Client",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run", "client"],
+      "port": 9229,
+      "skipFiles": ["<node_internals>/**"]
+    }
+  ]
 }
