--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "apollo-server-express": "^2.9.14",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^14.5.8"
+    "graphql": "^14.5.8",
+    "graphql-validation-complexity": "^0.2.5"
   },
   "devDependencies": {
     "esm": "^3.2.25",
