--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
-    "graphql-validation-complexity": "^0.2.5"
+    "graphql-validation-complexity": "^0.2.5",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "esm": "^3.2.25",
-    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2"
   }
 }
