--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,12 @@
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
+  "compounds": [
+    {
+      "name": "React Client Compounds",
+      "configurations": ["React Client", "Launch Chrome"]
+    }
+  ],
   "configurations": [
     {
       "type": "node",
@@ -36,7 +42,26 @@
       "runtimeArgs": ["run", "start"],
       "restart": true,
       "port": 7777,
-      "skipFiles": ["<node_internals>/**"]
+      "skipFiles": ["<node_internals>/**"],
+      "internalConsoleOptions": "openOnSessionStart",
+      "console": "integratedTerminal"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "React Client",
+      "cwd": "${workspaceFolder}/client/react-client",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run", "start"],
+      "port": 6666,
+      "console": "integratedTerminal"
+    },
+    {
+      "type": "chrome",
+      "request": "launch",
+      "name": "Launch Chrome",
+      "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder}/client/react-client/src"
     }
   ]
 }
