added mutation in react

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -57,6 +57,7 @@
       "runtimeExecutable": "npm",
       "runtimeArgs": ["run", "start"],
       "port": 6666,
+      "internalConsoleOptions": "openOnSessionStart",
       "console": "integratedTerminal"
     },
     {
