--- a/client/react-client/package.json
+++ b/client/react-client/package.json
@@ -11,6 +11,7 @@
     "graphql": "^14.5.8",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
+    "react-collapsible": "^2.6.2",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
