--- a/client/react-client/package.json
+++ b/client/react-client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
     "graphql": "^14.5.8",
+    "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-collapsible": "^2.6.2",
