--- a/client/react-client/package.json
+++ b/client/react-client/package.json
@@ -8,13 +8,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
+    "apollo-link-ws": "^1.0.19",
     "graphql": "^14.5.8",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-collapsible": "^2.6.2",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
     "start": "react-scripts --inspect-brk=6666 start",
