--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "apollo-server": "nodemon --inspect-brk=8888 -r esm apollo-server",
-    "pure-server": "nodemon --inspect-brk=9999 -r esm pure-server",
-    "client": "nodemon --inspect-brk=7777 -r esm client"
+    "apollo-server": "node --inspect-brk=8888 -r esm apollo-server",
+    "pure-server": "node--inspect-brk=9999 -r esm pure-server",
+    "client": "node --inspect-brk=7777 -r esm client"
   },
   "author": "",
   "license": "ISC",
