--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "apollo-server": "node --inspect-brk=8888 -r esm apollo-server",
     "pure-server": "node--inspect-brk=9999 -r esm pure-server",
-    "client": "node --inspect-brk=7777 -r esm client"
+    "start": "node -r esm apollo-server"
   },
   "author": "",
   "license": "ISC",
