--- a/server/package.json
+++ b/server/package.json
@@ -18,10 +18,10 @@
     "graphql": "^14.5.8",
     "graphql-validation-complexity": "^0.2.5",
     "jsonwebtoken": "^8.5.1",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "esm": "^3.2.25"
   },
   "devDependencies": {
-    "esm": "^3.2.25",
     "nodemon": "^2.0.2"
   }
 }
