--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -17,7 +17,7 @@ jobs:
       run: pwd
     
     - name: Into React App
-      run: cd 'client/react-client'
+      run: cd client/react-client
       
     - name: path
       run: pwd
