--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -1,29 +1,27 @@
-name: Client Deploy to Zeit (Now.sh) 
+name: Client Deploy to Zeit (Now.sh)
 
 on: [push]
 
 jobs:
   build:
-
     runs-on: [macos-latest]
 
     steps:
-    - uses: actions/checkout@v1
-      
-    - name: Setup Now.sh
-      run: npm i -g now   
-        
-    - name: Npm Install
-      run: npm i
-      working-directory: ./client/react-client
-      
-    - name: Build React App
-      run: npm run build
-      working-directory: ./client/react-client
-       
-    - name: Deploy to Zeit via Now.sh
-      run: now --name akb-first-graphql-client --token $ZEIT_TOKEN
-      working-directory: ./client/react-client/build
-      env:
-        ZEIT_TOKEN: ${{ secrets.ZEIT_TOKEN  }}
-        
+      - uses: actions/checkout@v1
+
+      - name: Setup Now.sh
+        run: npm i -g now
+
+      - name: Npm Install
+        run: npm i
+        working-directory: ./client/react-client
+
+      - name: Build React App
+        run: npm run build
+        working-directory: ./client/react-client
+
+      - name: Deploy to Zeit via Now.sh
+        run: now --prod --name akb-first-graphql-client --token $ZEIT_TOKEN
+        working-directory: ./client/react-client/build
+        env:
+          ZEIT_TOKEN: ${{ secrets.ZEIT_TOKEN  }}
